Still more updates.

--- a/Komodo_Console/Komodo_Console.csproj
+++ b/Komodo_Console/Komodo_Console.csproj
@@ -1,5 +1,10 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
+  <ItemGroup>
+    <ProjectReference Include="..\Developer_Repo\Developer_Repo.Repository.csproj" />
+    <ProjectReference Include="..\Dev_Team_Repository\Dev_Team.Repository.csproj" />
+  </ItemGroup>
+
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net8.0</TargetFramework>
